--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bbbs-installer (0.3) UNRELEASED; urgency=low
+bbbs-installer (4.01-1~3) UNRELEASED; urgency=low
 
   * Initial Release of the BBBS debian installer package. 
 
