--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-bbbs-installer (4.01-1~3) UNRELEASED; urgency=low
+bbbs-installer (4.01-1) stable; urgency=low
 
   * Initial Release of the BBBS debian installer package. 
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 26 Dec 2009 10:48:40 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun,  3 Jan 2010 00:22:48 -0500
