--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-bbbs-installer (4.01-1) stable; urgency=low
+bbbs-installer (4.01-0squeeze1) squeeze; urgency=low
 
   * Initial Release of the BBBS debian installer package. 
 
- -- Robert James Clay <jame@rocasa.us>  Sun,  3 Jan 2010 00:22:48 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun,  3 Jan 2010 00:43:54 -0500
